--- a/platformio.ini
+++ b/platformio.ini
@@ -9,7 +9,7 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs =
+default_envs = lord-board
 	;m5stack-cplus1_1
 	;m5stack-cplus2
 	;m5stack-cardputer
@@ -19,7 +19,7 @@ default_envs =
 	;m5stack-cores3
 	;CYD-2432S028
 	;CYD-2USB
-	lilygo-t-embed-cc1101
+	;lilygo-t-embed-cc1101
 	;lilygo-t-deck
 	;lilygo-t-display-s3
 	;lilygo-t-lora-pager
@@ -93,7 +93,7 @@ lib_deps =
 	https://github.com/rennancockles/SimpleCLI
 	https://github.com/whywilson/ESP-PN532BLE
 	https://github.com/whywilson/ESP-PN532-UART@^0.0.2
-	https://github.com/whywilson/ESP-PN532Killer@^0.0.4
+	https://github.com/whywilson/ESP-PN532Killer@^0.0.5
 	NTPClient
 	Timezone
 	ESP32Time
